k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-leo-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: proyecto-leo-frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proyecto-leo-frontend
            port:
              number: 80
